Update dockerfile for build options (#3567)
* Update dockerfile for build options

* Start permanent on small

* Default to small

* Default to small fixup

--- a/.github/workflows/build-private-images.yml
+++ b/.github/workflows/build-private-images.yml
@@ -47,6 +47,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
+            MIX_ENV=prod
             BUILD_METADATA=${{ steps.meta.outputs.json }}
 
       - name: Image digest
