--- a/.github/workflows/build-public-images.yml
+++ b/.github/workflows/build-public-images.yml
@@ -46,6 +46,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
+            MIX_ENV=small
             BUILD_METADATA=${{ steps.meta.outputs.json }}
             ERL_FLAGS=+JPperf true
 
