--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        postgres_version: [14, 15, 16]
+        postgres_version: [15, 16]
 
     services:
       postgres:
